--- a/BCNWGG22.html
+++ b/BCNWGG22.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Global governance of emerging technologies - who is filling the voids?</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -21,7 +21,11 @@
 
 class: center, middle
 
-# Title
+# Global governance of emerging technologies - who is filling the voids?
+      ## Draft prepared for BCNWGG 2022
+      ## Lewin Schmitt (lewin.schmitt@upf.edu)
+      
+      2022 May 19
 
 ---
 
