--- a/bcnwgg22/slides.html
+++ b/bcnwgg22/slides.html
@@ -20,7 +20,7 @@
   <body>
     <textarea id="source">
 
-      class: center, middle
+      class: center, middle, inverse
 
       # Global governance of emerging technologies - who is filling the voids?
 
