--- a/bcnwgg22/slides.html
+++ b/bcnwgg22/slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Global governance of emerging technologies - who is filling the voids?</title>
+    <title>SLIDES: Global governance of emerging technologies - who is filling the voids?</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
