--- a/bcnwgg22/slides.html
+++ b/bcnwgg22/slides.html
@@ -124,7 +124,7 @@
 
       - **Informal IOs** (G7 and G20) = decorative second-movers
       - **Like-minded formal IOs** (OECD and EU) = decisive first-movers
-      - **Diverse formal IOs** (UNESCO and CoE) = decisive second-movers)
+      - **Diverse formal IOs** (UNESCO and CoE) = decisive second-movers
       
       Ergo: Formal IOs decisive, like-minded IOs faster. 
 
