--- a/bcnwgg22/slides.html
+++ b/bcnwgg22/slides.html
@@ -122,9 +122,9 @@
       
       Case study shows
 
-      - **Informal IOs** (G7 and G20) = decorative second-movers
-      - **Like-minded formal IOs** (OECD and EU) = decisive first-movers
-      - **Diverse formal IOs** (UNESCO and CoE) = decisive second-movers
+      - **Informal IOs** (G7 and G20) $=$ decorative second-movers
+      - **Like-minded formal IOs** (OECD and EU) $=$ decisive first-movers
+      - **Diverse formal IOs** (UNESCO and CoE) $=$ decisive second-movers
       
       Ergo: Formal IOs decisive, like-minded IOs faster. 
 
