--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -46,10 +46,10 @@
 
       - AI everywhere (including in this paper), politics lagging behind
       - AI ethics and policy docs shape discourse
-      - Previous literature* analysed them at document-level
-      - Contributions: sentence-level analysis, updated and larger catalogue of docs, new theoretical approaches (beyond topics to tone and purpose)
+      - Previous literature&lt;sup&gt;*&lt;/sup&gt; analysed them at document-level
+      - This paper's contributions: sentence-level analysis, updated and larger catalogue of docs, new theoretical approaches (beyond topics to tone and purpose)
 
-      * Jobin (2019), Fjeld (2020), D. Schiff et al. (2019, 2021)
+      .left[.footnote[&lt;sup&gt;*&lt;/sup&gt; Jobin (2019), Fjeld (2020), D. Schiff et al. (2019, 2021)]]
 
       ---
 
