--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -49,15 +49,15 @@
       - Previous literature&lt;sup&gt;*&lt;/sup&gt; analysed them at document-level
       - This paper's contributions: sentence-level analysis, updated and larger catalogue of docs, new theoretical approaches (beyond topics to tone and purpose)
 
-      .left[.footnote[&lt;sup&gt;*&lt;/sup&gt; Jobin (2019), Fjeld (2020), D. Schiff et al. (2019, 2021)]]
+      .left[.footnote[&lt;sup&gt;*&lt;/sup&gt; Jobin et al. (2019), Fjeld et al. (2020), Schiff et al. (2020, 2021)]]
 
       ---
 
-      # Conceptual Framework
+      # Disclaimer
 
       .pull-left[
 
-      Following *Morin et al.* (2019)
+      This is just a pilot. Data collection and human coding in progress, certain conceptual choices still tbd.
 
       ]
 
@@ -65,27 +65,46 @@
 
       .pull-right[
 
-      ![](img/BCNWGG%20-%20Sticky%20institutions%20-%20Plain.png)
+      ![](img/pilot.jpg)
 
       ]
 
       ---
 
-      # Case studies: AI and crypto
+      # Workflow
 
-      - typical, influential cases
-      - diverse conditions with similar outcomes
-      - both with a comparable time frame (global policy discussions picking up in the 2010s)
-      - AI: general-purpose
-      - crypto: application of blockchain tech
+            .pull-left[
+
+            Document level: Mostly manual.
+
+            Sentence level: Mostly computational.
+
+            ]
+
+            --
+
+            .pull-right[
+
+            ![](img/AIdocs_Workflow_v2.png)
+
+            ]
 
       ---
 
-      # AI deep dive I
+      # Coding at document level (metadata)
+
+      - Date, region, ...
+      - Type of actor: public, private, civil society
+      - Target audience:
+      - Scope: broad vs narrow
+
+      ---
+
+      # Coding at sentence level (training data)
 
       .left-column[
 
-      ![](https://media3.giphy.com/media/iMBEgyXkFBtdCFS93i/giphy.gif)
+      ![](img/table2.png)
 
       ]
 
@@ -93,20 +112,18 @@
 
       .right-column[
 
-      Timeline of key events
+      Human coding of training sample (10% = 5,996 sentences)
 
-      - 2018: Global policy debate kicking off
-        - G7 first substantive ministerial statement
-        - EU coming out with AI strategy
-        - OECD formed expert group on AI
-      - 2019: First outcomes, others joining in
-        - OECD's AI Principles
-        - endorsed by G20
-        - EU High-Level Expert Group & trailblazing Ethics Guidelines for Trustworthy AI
-        - Council of Europe establishes CAHAI
-      - 2020 - today:
-        - UNESCO Recommendation on AI
-        - Interorganizational cooperation: Globalpolicy.ai
+      - Topic(s)
+        - Following Jobin et al.
+        - Transparency, Justice & Fairness, Responsibility, ...
+      - Tone
+        - Still unsure.
+        - Sentiment (negative, neutral, positive
+        - Opportunity, warning, ...
+      - Purpose:
+        - Still unsure.
+        - Explanation, commitment, recommendation, ...
 
       ]
 
