--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -104,7 +104,10 @@
 
       .left-column[
 
-      ![](img/table2.png)
+      ID | Text
+      -- | -----
+      1  | This is a text
+      2  | This is no text
 
       ]
 
