--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -113,7 +113,11 @@
 
       --
 
-      .right-column[
+      ---
+
+      # Coding at sentence level (training data)
+
+      .pull-left[
 
       Human coding of training sample (10% = 5,996 sentences)
 
@@ -127,6 +131,12 @@
       - Purpose:
         - Still unsure.
         - Explanation, commitment, recommendation, ...
+
+      ]
+
+      .pull-right[
+
+      ![](img/table2.png)
 
       ]
 
