--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -57,7 +57,9 @@
 
       .pull-left[
 
-      This is just a pilot. Data collection and human coding in progress, certain conceptual choices still tbd.
+      This is just a pilot.
+      Data collection and human coding in progress.
+      Certain conceptual choices still tbd.
 
       ]
 
