--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -46,8 +46,11 @@
 
       - AI everywhere (including in this paper), politics lagging behind
       - AI ethics and policy docs shape discourse
-      - Previous literature&lt;sup&gt;*&lt;/sup&gt; analysed them at document-level
-      - This paper's contributions: sentence-level analysis, updated and larger catalogue of docs, new theoretical approaches (beyond topics to tone and purpose)
+      - Previous literature&lt;sup&gt;*&lt;/sup&gt; analysed them at document-level, mostly by human coding
+      - This paper's contributions:
+        - sentence-level analysis powered by machine learning
+        - updated and larger catalogue of docs
+        - new theoretical approaches (beyond topics to tone and purpose)
 
       .left[.footnote[&lt;sup&gt;*&lt;/sup&gt; Jobin et al. (2019), Fjeld et al. (2020), Schiff et al. (2020, 2021)]]
 
@@ -144,7 +147,7 @@
 
       ---
 
-      # AI deep dive II
+      # Neural net classifiers
 
       .left-column[
 
