--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -107,21 +107,6 @@
 
       # Coding at sentence level (training data)
 
-      .left-column[
-
-      ID | Text
-      -- | -----
-      1  | This is a text
-      2  | This is no text
-
-      ]
-
-      --
-
-      ---
-
-      # Coding at sentence level (training data)
-
       .pull-left[
 
       Human coding of training sample (10% = 5,996 sentences)
@@ -160,8 +145,9 @@
 
       .right-column[
 
-      Case study shows
-
+      .huge[Case study shows]
+      .tiny[Test for small font]
+      
       - **Informal IOs** (G7 and G20) = decorative second-movers
       - **Like-minded formal IOs** (OECD and EU) = decisive first-movers
       - **Diverse formal IOs** (UNESCO and CoE) = decisive second-movers
