--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -38,7 +38,8 @@
       2. Document-level coding
       3. Sentence-level coding
       4. Neural net classifiers
-      5. Discussion
+      5. Downstream analysis (projected)
+      6. Discussion
 
       ---
 
@@ -196,9 +197,11 @@
 
       ]
 
-      .right-column.img-tiny.center[
+      --
 
-      ![](img/machine_learning.png)
+      .right-column.img-small.center[
+
+      ![](img/selfportrait.png)
 
       ]
 
