--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -53,7 +53,7 @@
         - updated and larger catalogue of docs
         - new theoretical approaches (beyond topics to tone and purpose)
 
-      .left[.footnote[&lt;sup&gt;*&lt;/sup&gt; Jobin et al. (2019), Fjeld et al. (2020), Schiff et al. (2020, 2021)]]
+      .left.small[.footnote[&lt;sup&gt;*&lt;/sup&gt; Jobin et al. (2019), Fjeld et al. (2020), Schiff et al. (2020, 2021)]]
 
       ---
 
