--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -105,7 +105,7 @@
 
       - **Metadata**: date, region, ...
       - **Type of actor**: public, private, civil society
-      - **Target audience**: developers/expert community, policymakers, general public (add "self"?)
+      - **Target audience**: developers/expert community, policymakers, general public
       - **Scope**: broad vs narrow
 
       ]
