--- a/VIeps_2022/slides.html
+++ b/VIeps_2022/slides.html
@@ -153,7 +153,7 @@
       .left-column.small[
 
       - **Assignment of labels as binary classification tasks**
-      - Class balance
+      - Ensure class balance, withhold 20% test set
       - Standard text preprocessing using the off-the-shelf *tf.keras.layers.TextVectorization* layer
       - Word embeddings with 64 dimensions (pretrained BERT as next step)
       - Depth: 50 epochs
